# frc-rebuilt-panoptes

./: .gitignore
kc_vision/: CMakeLists.txt  package.xml
kc_vision/config/: base_params.yaml  front_camera_params.yaml  rviz_config.rviz
kc_vision/config/camera_calibrations/: logitech_c310_64AF26A0.yaml
kc_vision/launch/: kc_vision.launch.py  rebuilt_field.launch.py  rviz.launch.py
kc_vision/resources/: bnb-yolov9t-150.rvc2.tar.xz
kc_vision/src/: mono_camera_node.cpp
kc_vision/src/common/: utilities.cpp  utilities.h
kc_vision/src/field_urdf_generator/: apriltag_urdf_generator.py
kc_vision/src/intake_cam/: InferenceEngine.cpp  InferenceEngine.h  OakPipeline.cpp  OakPipeline.h  intake_cam_node.cpp
kc_vision/src/ros_nt_bridge/: ros_nt_bridge.cpp
kc_vision/src/solve_pnp/: solve_pnp.cpp
kc_vision/src/tag_consensus/: apecs.cpp  ransac.cpp  ransac.h  tag_consensus.cpp
kc_vision/urdf/: mk2_robot.urdf  rebuilt_field.urdf
kc_vision_msgs/: CMakeLists.txt  package.xml
